Bug 302052 - textarea automatically scroll content on focus out
Summary: textarea automatically scroll content on focus out
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml forms (other bugs)
Version First Reported In: 4.8.4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-17 12:43 UTC by Andrea Iacovitti
Modified: 2012-06-17 17:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
testcase (197 bytes, text/html)
2012-06-17 12:43 UTC, Andrea Iacovitti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Iacovitti 2012-06-17 12:43:58 UTC
Created attachment 71886 [details]
testcase

When loosing focus unwanted scroll of textarea's content is performed if the line containing the cursor is not visible.
To reproduce: load the attached testcase, put the cursor at "line7", scroll the content up to the beginning whit the help of scrollbar, click away on page.
Comment 1 Andrea Iacovitti 2012-06-17 17:24:00 UTC
Git commit 95ccc85ae312453bf68c0fb48025c5dab21faa81 by Andrea Iacovitti.
Committed on 17/06/2012 at 19:04.
Pushed by aiacovitti into branch 'KDE/4.8'.

Do not call setStyle() in RenderWidget::updateFromElement() for all type
of widgets. It is needed for select elements when switching internal
widget type.

An evident side effect is the unwanted scroll of textarea's content on
focus out, caused in turn by setAlignment() in RenderTextArea::setStyle().
Related: bug 142722

M  +5    -1    khtml/rendering/render_form.cpp
M  +0    -4    khtml/rendering/render_replaced.cpp

http://commits.kde.org/kdelibs/95ccc85ae312453bf68c0fb48025c5dab21faa81