Do not call setStyle() in RenderWidget::updateFromElement() for all type of widgets. It is needed for select elements when switching internal widget type.

An evident side effect is the unwanted scroll of textarea's content on
focus out, caused in turn by setAlignment() in RenderTextArea::setStyle().

BUG: 302052
CCBUG: 142722